--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,60 +1,54 @@
 # Tên của workflow
-name: CI Workflow
+name: API Test Workflow (Newman)
 
-# 1. YÊU CẦU: Trigger workflow on push or pull request
+# Kích hoạt khi push hoặc pull request
 on:
   push:
-    branches: [ "main", "master" ] # Kích hoạt khi push lên nhánh main hoặc master
+    branches: [ "main", "master" ]
   pull_request:
-    branches: [ "main", "master" ] # Kích hoạt khi tạo pull request vào main/master
+    branches: [ "main", "master" ]
 
-# Định nghĩa các công việc sẽ chạy
+# Định nghĩa công việc
 jobs:
-  build-and-test:
-    name: Build, Lint, and Test
-    runs-on: ubuntu-latest # Chạy trên một máy ảo Ubuntu (Linux)
+  api-testing:
+    name: Run Postman Tests with Newman
+    # Chạy trên máy ảo Ubuntu
+    runs-on: ubuntu-latest
 
     steps:
-      # Bước 1: Lấy code từ repo về máy ảo
+      # Bước 1: Lấy code về (code này đã chứa file .json)
       - name: 1. Check out repository
         uses: actions/checkout@v4
 
-      # Bước 2: Cài đặt Node.js (phiên bản 18, giống Dockerfile)
-      - name: 2. Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm' # Dùng cache để tăng tốc npm install
-          cache-dependency-path: '**/package-lock.json' # Cache cho cả 2 project
+      # Bước 2: Khởi chạy toàn bộ hệ thống (app, db)
+      # -d (detached mode) là chạy ngầm, không block terminal
+      - name: 2. Start services (Docker Compose)
+        run: docker compose up -d
 
-      # --- Chạy các lệnh cho Frontend (React App ở gốc) ---
-      - name: 3. (Frontend) Install dependencies
-        run: npm install
+      # Bước 3: Đợi backend sẵn sàng (rất quan trọng)
+      # Lệnh này sẽ liên tục gọi /health 5 giây một lần cho đến khi thành công
+      - name: 3. Wait for backend to be healthy
+        run: |
+          echo "Waiting for backend..."
+          until $(curl --output /dev/null --silent --head --fail http://localhost:3001/health); do
+            printf '.'
+            sleep 5
+          done
+          echo "Backend is healthy!"
 
-      - name: 4. (Frontend) Run Lint
-        run: npm run lint # 2. YÊU CẦU: Lint script
-        continue-on-error: true # Sẽ tiếp tục dù bước này lỗi (phòng khi bạn chưa setup)
+      # Bước 4: Cài đặt Newman (công cụ chạy test Postman)
+      - name: 4. Install Newman
+        run: npm install -g newman
 
-      - name: 5. (Frontend) Run Tests
-        run: npm run test # 2. YÊU CẦU: Test script
-        continue-on-error: true # Sẽ tiếp tục dù bước này lỗi (phòng khi bạn chưa setup)
+      # Bước 5: Chạy test!
+      # ** QUAN TRỌNG: Đảm bảo tên file này đúng với tên file bạn đã lưu **
+      - name: 5. Run Newman tests
+        run: newman run "Mocktest.postman_collection.json" 
+        # (Mình để tên trong ngoặc kép "" để phòng trường hợp bạn lưu tên là "Mocktest API.postman_collection.json")
 
-      - name: 6. (Frontend) Run Build
-        run: npm run build # Tạo ra thư mục 'dist'
+      # Bước 6: (Luôn chạy) Dọn dẹp sau khi test xong
+      # 'if: always()' đảm bảo bước này luôn chạy, kể cả khi test fail
+      - name: 6. Stop services
+        if: always() 
+        run: docker compose down
 
-      # --- Chạy các lệnh cho Backend (trong thư mục /backend) ---
-      - name: 7. (Backend) Install dependencies
-        run: npm install
-        working-directory: ./backend # Chỉ định chạy lệnh trong thư mục 'backend'
-
-      - name: 8. (Backend) Run Lint
-        run: npm run lint # 2. YÊU CẦU: Lint script
-        working-directory: ./backend
-        continue-on-error: true # Sẽ tiếp tục dù bước này lỗi (phòng khi bạn chưa setup)
-
-      # --- Tải lên Artifact (kết quả build) ---
-      - name: 9. Upload Build Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend-build-artifact # Tên của gói artifact
-          path: ./dist/ # 2. YÊU CẦU: Upload thư mục build (dist)
